sas-core/main/default/objects/Read_Only_Config__mdt/Read_Only_Config__mdt.object-meta.xml
<CustomObject>
    <description>Config for permanent case closure functionality</description>
    <label>Read-Only Config</label>
    <pluralLabel>Read-Only Configs</pluralLabel>
</CustomObject>