sas-core/main/default/objects/Read_Only_Config__mdt/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <label>Email Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>